create newsletter section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,44 @@
 
 
 
+    <main>
+
+        <section class="newsletter">
+            <h2>Get Leatest Update By Subscribe Our Newslater</h2>
+            <a href="#" class="btn btn-primary Shop-btn">Shop Now</a>
+        </section>
+
+        <section class="clients">
+            <div class="container">
+                <div class="row">
+                    <div class="logo">
+                        <img src="./assets/img/clients/—Pngtree—creative logo of circular simple_4372775.webp" alt="logo1" />
+                    </div>
+
+                    <div class="logo">
+                        <img src="./assets/img/clients/—Pngtree—creative logo of circular simple_4372775.webp" alt="logo2" />
+                    </div>
+
+                    <div class="logo">
+                        <img src="./assets/img/clients/—Pngtree—creative logo of circular simple_4372775.webp" alt="logo3" />
+                    </div>
+
+                    <div class="logo">
+                        <img src="./assets/img/clients/—Pngtree—creative logo of circular simple_4372775.webp" alt="logo4" />
+                    </div>
+
+                    <div class="logo">
+                        <img src="./assets/img/clients/—Pngtree—creative logo of circular simple_4372775.webp" alt="logo5" />
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+
+
     <footer class="footer">
         <div class="container">
             <div class="row">
