create featuredproduct section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,107 @@
 
     <main>
 
+        <section class="featured-product text-center">
+            <h2>Featured Product</h2>
+            <div class="container">
+                <div class="row">
+
+                 <div class="product">
+
+                    <div class="img">
+                        <img src="./assets/img/products/image (3).webp">
+                    </div>
+
+                    <div class="product-details">
+                        <h3>Cantilever chair</h3>
+
+                         <div class="color-options">
+                            <button class="color color-one"></button>
+                            <button class="color color-two"></button>
+                            <button class="color color-three"></button>
+                         </div>
+
+                         <div class="product-info d-flex flex-direction gap-2 ">
+                            <span class="text-secondary">Code - Y523201</span>
+                            <span class="text-secondary">$42.00</span>
+                         </div>
+                    </div>
+                 </div>
+
+                 <div class="product">
+
+                    <div class="badge-sale">
+                        <img src="./assets/img/public/sale.png">
+                    </div>
+
+                    <div class="img">
+                        <img src="./assets/img/products/image (2).webp">
+                    </div>
+
+                    <div class="product-details">
+                        <h3>Cantilever chair</h3>
+
+                         <div class="color-options">
+                            <button class="color color-one"></button>
+                            <button class="color color-two"></button>
+                            <button class="color color-three"></button>
+                         </div>
+
+                         <div class="product-info d-flex flex-direction gap-2">
+                            <span class="text-secondary">Code - Y523201</span>
+                            <span class="text-secondary">$42.00</span>
+                         </div>
+                    </div>
+                 </div>
+
+                 <div class="product">
+
+                    <div class="img">
+                        <img src="./assets/img/products/image (1).webp">
+                    </div>
+
+                    <div class="product-details">
+                        <h3>Cantilever chair</h3>
+
+                         <div class="color-options">
+                            <button class="color color-one"></button>
+                            <button class="color color-two"></button>
+                            <button class="color color-three"></button>
+                         </div>
+
+                         <div class="product-info d-flex flex-direction gap-2">
+                            <span class="text-secondary">Code - Y523201</span>
+                            <span class="text-secondary">$42.00</span>
+                         </div>
+                    </div>
+                 </div>
+
+                 <div class="product">
+
+                    <div class="img">
+                        <img src="./assets/img/products/image.webp">
+                    </div>
+
+                    <div class="product-details">
+                        <h3>Cantilever chair</h3>
+
+                         <div class="color-options">
+                            <button class="color color-one"></button>
+                            <button class="color color-two"></button>
+                            <button class="color color-three"></button>
+                         </div>
+
+                         <div class="product-info d-flex flex-direction gap-2">
+                            <span class="text-secondary">Code - Y523201</span>
+                            <span class="text-secondary">$42.00</span>
+                         </div>
+                    </div>
+                 </div>
+
+                </div>
+            </div>
+        </section>
+
         <section class="newsletter">
             <h2>Get Leatest Update By Subscribe Our Newslater</h2>
             <a href="#" class="btn btn-primary Shop-btn">Shop Now</a>
