create Shopex-Offer section

--- a/index.html
+++ b/index.html
@@ -227,8 +227,6 @@
             </div>
         </section>
 
-
-
         <section class="leatest-Products text-center">
             <h2>Leatest Products</h2>
             <nav class="links d-flex text-secondary">
@@ -274,7 +272,7 @@
                         </div>
 
                         <div class="leatest-product-details">
-                            <h3>Comfort Handy Craft</h3>
+                            <h3 class="text-secondary">Comfort Handy Craft</h3>
 
                             <div class="leatest-product-info gap-2 ">
                                 <span class="text-secondary">$42.00</span>
@@ -296,7 +294,7 @@
                         </div>
 
                         <div class="leatest-product-details">
-                            <h3>Comfort Handy Craft</h3>
+                            <h3 class="text-secondary">Comfort Handy Craft</h3>
 
                             <div class="leatest-product-info gap-2 ">
                                 <span class="text-secondary">$42.00</span>
@@ -319,7 +317,7 @@
                         </div>
 
                         <div class="leatest-product-details">
-                            <h3>Comfort Handy Craft</h3>
+                            <h3 class="text-secondary">Comfort Handy Craft</h3>
 
                             <div class="leatest-product-info gap-2 ">
                                 <span class="text-secondary">$42.00</span>
@@ -342,7 +340,7 @@
                         </div>
 
                         <div class="leatest-product-details">
-                            <h3>Comfort Handy Craft</h3>
+                            <h3 class="text-secondary">Comfort Handy Craft</h3>
 
                             <div class="leatest-product-info gap-2 ">
                                 <span class="text-secondary">$42.00</span>
@@ -366,7 +364,7 @@
                         </div>
 
                         <div class="leatest-product-details">
-                            <h3>Comfort Handy Craft</h3>
+                            <h3 class="text-secondary">Comfort Handy Craft</h3>
 
                             <div class="leatest-product-info gap-2 ">
                                 <span class="text-secondary">$42.00</span>
@@ -376,6 +374,43 @@
 
 
                     </div>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="shopex-offer text-center">
+            <h2>What Shopex Offer!</h2>
+
+            <div class="container">
+                <div class="row">
+
+                    <div class="offer">
+                        <img src="./assets/img/offer/free-delivery.webp"alt="free-delivery" />
+                        <h3 class="text-secondary">24/7 Support</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, corrupti praesentium.</p>
+                    </div>
+
+                    <div class="offer">
+                        <img src="./assets/img/offer/cashback.webp"alt="cashback" />
+                        <h3 class="text-secondary">24/7 Support</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, corrupti praesentium.</p>
+                    </div>
+
+                    <div class="offer">
+                        <img src="./assets/img/offer/premium-quality.webp"alt="premium-quality" />
+                        <h3 class="text-secondary">24/7 Support</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, corrupti praesentium.</p>
+                    </div>
+
+                    <div class="offer">
+                        <img src="./assets/img/offer/24-hours-support.webp"alt="24-hours-support" />
+                        <h3 class="text-secondary">24/7 Support</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, corrupti praesentium.</p>
+                    </div>
+
+
                 </div>
             </div>
 
