create Top-Categories section

--- a/index.html
+++ b/index.html
@@ -551,6 +551,79 @@
                 </div>
         </section>
 
+        <section class="top-categories text-center">
+            <h2>Top Categories</h2>
+            <div class="container">
+                <div class="row">
+
+                    <div class="top-product">
+
+                        <div class="img">
+                            <img src="./assets/img/top categories/image (1).webp">
+                            <a href="#" class="view-shop">View Shop</a>
+                        </div>
+
+                        <div class="top-product-details">
+                            <h3>Mini LCW Chair</h3>
+
+                            <div class="top-product-info d-flex flex-direction gap-2 ">
+                                <span class="text-secondary">$56.00</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="top-product">
+
+                        <div class="img">
+                            <img src="./assets/img/top categories/image (2).webp">
+                            <a href="#" class="view-shop">View Shop</a>
+                        </div>
+
+                        <div class="top-product-details">
+                            <h3>Mini LCW Chair</h3>
+
+                            <div class="top-product-info d-flex flex-direction gap-2 ">
+                                <span class="text-secondary">$56.00</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="top-product">
+
+                        <div class="img">
+                            <img src="./assets/img/top categories/image (3).webp">
+                            <a href="#" class="view-shop">View Shop</a>
+                        </div>
+
+                        <div class="top-product-details">
+                            <h3>Mini LCW Chair</h3>
+
+                            <div class="top-product-info d-flex flex-direction gap-2 ">
+                                <span class="text-secondary">$56.00</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="top-product">
+
+                        <div class="img">
+                            <img src="./assets/img/top categories/image (1).webp">
+                            <a href="#" class="view-shop">View Shop</a>
+                        </div>
+
+                        <div class="top-product-details">
+                            <h3>Mini LCW Chair</h3>
+
+                            <div class="top-product-info d-flex flex-direction gap-2 ">
+                                <span class="text-secondary">$56.00</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         <section class="newsletter">
             <h2>Get Leatest Update By Subscribe Our Newslater</h2>
             <a href="#" class="btn btn-primary Shop-btn">Shop Now</a>
