create Leatest-Blog section

--- a/index.html
+++ b/index.html
@@ -89,9 +89,6 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-contant">
-                        <div class="hero-lamp">
-                            <img src="./assets/img/public/hero-lamp.webp" alt="lamp">
-                        </div>
 
                         <div class="text-contant">
                             <p class="p-one">Best Furniture For Your Castle....</p>
@@ -658,6 +655,99 @@
                     </div>
                 </div>
             </div>
+
+        </section>
+
+        <section class="leatest-blog text-center">
+
+            <h2>Leatest Blog</h2>
+            <div class="container">
+                <div class="row">
+
+                    <div class="blog-product">
+
+                        <div class="img">
+                            <img src="./assets/img/Leatest Blog/image(1).webp">
+                        </div>
+                        <div class="icons">
+                            <div class="icon-item">
+                            <img src="./assets/img/Leatest Blog/Vector.png">
+                            <span>SaberAli</span>
+                        </div>
+                        <div class="icon-item">
+                            <img src="./assets/img/Leatest Blog/Vector (1).png">
+                            <span>21 August,2020</span>
+                            </div>
+                        </div>
+
+
+                        <div class="blog-product-details">
+                            <h3>Top essential trends in 2021</h3>
+
+                            <div class="blog-product-info d-flex flex-direction gap-2 ">
+                                <p>More off this less hello samlande lied much over tightly circa horse taped mightly</p>
+                                <a href="#" class="Read More">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="blog-product">
+
+                        <div class="img">
+                            <img src="./assets/img/Leatest Blog/image(2).webp">
+                        </div>
+                        <div class="icons">
+                            <div class="icon-item">
+                            <img src="./assets/img/Leatest Blog/Vector.png">
+                            <span>Surfauxion</span>
+                        </div>
+                        <div class="icon-item">
+                            <img src="./assets/img/Leatest Blog/Vector (1).png">
+                            <span>21 August,2020</span>
+                            </div>
+                        </div>
+
+
+                        <div class="blog-product-details">
+                            <h3>Top essential trends in 2021</h3>
+
+                            <div class="blog-product-info d-flex flex-direction gap-2 ">
+                                <p>More off this less hello samlande lied much over tightly circa horse taped mightly</p>
+                                <a href="#" class="Read More">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="blog-product">
+
+                        <div class="img">
+                            <img src="./assets/img/Leatest Blog/image(3).webp">
+                        </div>
+                        <div class="icons">
+                            <div class="icon-item">
+                            <img src="./assets/img/Leatest Blog/Vector.png">
+                            <span>SaberAli</span>
+                        </div>
+                        <div class="icon-item">
+                            <img src="./assets/img/Leatest Blog/Vector (1).png">
+                            <span>21 August,2020</span>
+                            </div>
+                        </div>
+
+
+                        <div class="blog-product-details">
+                            <h3>Top essential trends in 2021</h3>
+
+                            <div class="blog-product-info d-flex flex-direction gap-2 ">
+                                <p>More off this less hello samlande lied much over tightly circa horse taped mightly</p>
+                                <a href="#" class="Read More">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    </div>
+                    </div>
 
         </section>
 
